correcao de ortografia

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div class="content">
             <div class="title">DESIGN SLIDER</div>
             <div class="topic">DOG BREEDS</div>
-            <div class="breed">White West Highlander</div>
+            <div class="breed">West Highland</div>
             <div class="des">
               The Westie Highlander is a hybrid breed, a mix between a West
               Highland White Terrier and a Scottish Terrier. They typically
@@ -158,7 +158,7 @@
         <div class="item">
           <img src="./images/west-highland.jpg" alt="White West Highlander" />
           <div class="content">
-            <div class="title">West Highlander</div>
+            <div class="title">West Highland</div>
           </div>
         </div>
 
